leafgl 0.2.1.9005 (2023-09-08)

features and improvements

 * New method *clearGlGroup* removes a group from leaflet and the Leaflet.Glify instances.
 * The JavaScript methods of the `removeGl**` functions was rewritten to correctly remove an element identified by `layerId`
 * `clearGlLayers` now correctly removes all Leaflet.Glify instances
 * When showing/hiding Leaflet.Glify layers, they are set to active = TRUE/FALSE to make mouseevents work again. #48, #50

bug fixes

  * src version now works also in shiny. #71
  * added `popupOptions` and `labelOptions`. #83
  * added `stroke` (default=TRUE) in `addGlPolygons` and `addGlPolygonsSrc` for drawing borders. #3
  * Labels work similar to `leaflet`. `leafgl` accepts a single string, a vector of strings or a formula. #78
  * The `...` arguments are now passed to all methods in the underlying library. This allows us to set
    additional arguments like `fragmentShaderSource`, `sensitivity` or `sensitivityHover`.

documentation etc

 * Added some @details for Shiny click and mouseover events and their corresponding input. #77
 * Use `@inheritParams leaflet::**` for identical function arguments

miscellaneous


leafgl 0.2.1

new features:

  * all methods can now have labels/tooltips. Currently only lines and polygons support passing of a column name, points need a predefined label vector.

miscallaneous:

  * all methods now have a pane argument to control layer ordering (thanks to @trafficonese). #67 #64

leafgl 0.2.0

miscallaneous:

  * update upstream javascript dependency to 3.2.0

leafgl 0.1.2

new features:

  * expose additional JavaScript arguments in addGlPoints via magic dots. #54 & #60


leafgl 0.1.1

initial release.