@@ -1,29 +1,12 @@
 % Generated by roxygen2: do not edit by hand
-% Please edit documentation in R/glify-points.R, R/glify-lines.R,
+% Please edit documentation in R/glify-lines.R, R/glify-points.R,
 %   R/glify-polygons.R
-\name{addGlPoints}
-\alias{addGlPoints}
+\name{addGlPolylines}
 \alias{addGlPolylines}
+\alias{addGlPoints}
 \alias{addGlPolygons}
 \title{Add Data to a leaflet map using Leaflet.glify}
 \usage{
-addGlPoints(
-  map,
-  data,
-  fillColor = "#0033ff",
-  fillOpacity = 0.8,
-  radius = 10,
-  group = "glpoints",
-  popup = NULL,
-  label = NULL,
-  layerId = NULL,
-  src = FALSE,
-  pane = "overlayPane",
-  popupOptions = NULL,
-  labelOptions = NULL,
-  ...
-)
-
 addGlPolylines(
   map,
   data,
@@ -33,6 +16,23 @@ addGlPolylines(
   popup = NULL,
   label = NULL,
   weight = 1,
+  layerId = NULL,
+  src = FALSE,
+  pane = "overlayPane",
+  popupOptions = NULL,
+  labelOptions = NULL,
+  ...
+)
+
+addGlPoints(
+  map,
+  data,
+  fillColor = "#0033ff",
+  fillOpacity = 0.8,
+  radius = 10,
+  group = "glpoints",
+  popup = NULL,
+  label = NULL,
   layerId = NULL,
   src = FALSE,
   pane = "overlayPane",
@@ -64,11 +64,12 @@ addGlPolygons(
 
 \item{data}{sf/sp point/polygon/line data to add to the map.}
 
-\item{fillColor}{fill color}
+\item{color}{Object representing the color. Can be of class integer, character with
+color names, HEX codes or random characters, factor, matrix, data.frame, list, json or formula.
+See the examples or \link{makeColorMatrix} for more information.}
 
-\item{fillOpacity}{fill opacity}
-
-\item{radius}{point size in pixels.}
+\item{opacity}{feature opacity. Numeric between 0 and 1.
+Note: expect funny results if you set this to < 1.}
 
 \item{group}{the name of the group the newly created layers should belong to
 (for \code{\link[leaflet:clearGroup]{clearGroup()}} and \code{\link[leaflet:addLayersControl]{addLayersControl()}} purposes).
@@ -81,6 +82,8 @@ formula, logical, data.frame or matrix, Spatial, list or JSON. If the length doe
 match the number of rows in the data, the popup vector is repeated to match the dimension.}
 
 \item{label}{a character vector of the HTML content for the labels}
+
+\item{weight}{line width/thickness in pixels for \code{addGlPolylines}.}
 
 \item{layerId}{the layer id}
 
@@ -107,14 +110,11 @@ Additional arguments could be \code{'sensitivity'}, \code{'sensitivityHover'} or
 \href{https://github.com/robertleeplummerjr/Leaflet.glify}{Leaflet.glify}
 repository.}
 
-\item{color}{Object representing the color. Can be of class integer, character with
-color names, HEX codes or random characters, factor, matrix, data.frame, list, json or formula.
-See the examples or \link{makeColorMatrix} for more information.}
+\item{fillColor}{fill color}
 
-\item{opacity}{feature opacity. Numeric between 0 and 1.
-Note: expect funny results if you set this to < 1.}
+\item{fillOpacity}{fill opacity}
 
-\item{weight}{line width/thickness in pixels for \code{addGlPolylines}.}
+\item{radius}{point size in pixels.}
 
 \item{stroke}{whether to draw stroke along the path (e.g. the borders of
 polygons or circles)}
@@ -126,9 +126,9 @@ Leaflet.glify is a WebGL renderer plugin for leaflet. See
 }
 \section{Functions}{
 \itemize{
-\item \code{addGlPoints()}: Add Points to a leaflet map using Leaflet.glify
-
 \item \code{addGlPolylines()}: Add Lines to a leaflet map using Leaflet.glify
+
+\item \code{addGlPoints()}: Add Points to a leaflet map using Leaflet.glify
 
 \item \code{addGlPolygons()}: Add Polygons to a leaflet map using Leaflet.glify
 
@@ -167,6 +167,17 @@ MULTILINESTRINGs and MULTIPOLYGONs are currently not supported!
 }
 
 \examples{
+library(leaflet)
+library(leafgl)
+library(sf)
+
+storms = st_as_sf(atlStorms2005)
+cols = heat.colors(nrow(storms))
+
+leaflet() \%>\%
+  addProviderTiles(provider = providers$CartoDB.Positron) \%>\%
+  addGlPolylines(data = storms, color = cols, popup = TRUE, opacity = 1)
+
 \donttest{
 library(leaflet)
 library(leafgl)
@@ -184,16 +195,7 @@ leaflet() \%>\%
   addGlPoints(data = pts, fillColor = cols, popup = TRUE)
 }
 library(leaflet)
-library(sf)
-
-storms = st_as_sf(atlStorms2005)
-cols = heat.colors(nrow(storms))
-
-leaflet() \%>\%
-  addProviderTiles(provider = providers$CartoDB.Positron) \%>\%
-  addGlPolylines(data = storms, color = cols, popup = TRUE, opacity = 1)
-
-library(leaflet)
+library(leafgl)
 library(sf)
 
 gadm = st_as_sf(gadmCHE)
